Avoid horizontal jumping caused by scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,3 +25,7 @@ body {
   box-sizing: border-box;
   font-family: 'Roboto', Helvetica Neue Light, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
 }
+
+html {
+  margin-left: calc(100vw - 100%); /* Avoid horizontal jumping when scrollbar appear (e.g. when user opens "Weitere Informationen") */
+}
